Refactored code for improved readability and efficiency
Refactored `CreateCharacterDialog.java` and `CustomizePersonDialog.java` to improve code readability and efficiency. Removed redundant stream collection operations and simplified lambda expressions for handling action events. Furthermore, simplified how the DialogOptionComponent instances are operated on, by casting and operating on them directly, rather than extracting them into a separate variable.